# mcp-oda

./: .gitignore  .mcp.json  CHANGELOG.md  Makefile  ODA_API.md  README.md  eslint.config.mjs  gemini-extension.json  package-lock.json  package.json  pyproject.toml  release-please-config.json  run.sh  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/: renovate.json5
.github/workflows/: ci.yml  release-please.yml  stale.yml
commands/: oda-cart-review.md  oda-cart-review.toml  oda-meal-plan.md  oda-meal-plan.toml  oda_show_cart.md  oda_show_cart.toml
mcp_oda/: __main__.py  tools.py
skills/oda-assistant/: SKILL.md
src/: index.ts  oda-client.ts  server.ts  types.ts
tests/: conftest.py  integration.test.ts  test_everything.py  test_recipe_pagination.py  test_recipes.py  test_resources.py  test_search.py
